force-app/main/default/objects/Vehicle__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Invoiced</fullName>
                <default>true</default>
                <label>Not Invoiced</label>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>