force-app/main/default/objects/Vehicle__c/fields/Cancellation_Risk__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Risk__c</fullName>
    <label>Cancellation Risk</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>