force-app/main/default/objects/Vehicle__c/fields/Hydraulic_System__c.field-meta.xml
<CustomField>
    <fullName>Hydraulic_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hydraulic System</label>
    <type>Checkbox</type>
</CustomField>