force-app/main/default/objects/Vehicle__c/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <label>Interior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White Premium</fullName>
            </value>
            <value>
                <fullName>Black Premium</fullName>
                <default>true</default>
                <label>Black Premium</label>
            </value>
            <value>
                <fullName>Light Premium</fullName>
            </value>
            <value>
                <fullName>Cream Premium</fullName>
            </value>
            <value>
                <fullName>Black Textile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>