force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <defaultValue>&apos;Flash&apos;</defaultValue>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flint</fullName>
            </value>
            <value>
                <fullName>Flare</fullName>
            </value>
            <value>
                <fullName>Flash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>