force-app/main/default/objects/Vehicle__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>