force-app/main/default/objects/Vehicle__c/fields/Paint__c.field-meta.xml
<CustomField>
    <fullName>Paint__c</fullName>
    <defaultValue>&apos;1000&apos;</defaultValue>
    <label>Paint Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>