force-app/main/default/objects/Vehicle__c/fields/SAP_Order__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Order</label>
    <referenceTo>SAP_Order__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>