force-app/main/default/objects/Vehicle__c/fields/Spoiler__c.field-meta.xml
<CustomField>
    <fullName>Spoiler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carbon Fiber Spoiler</label>
    <type>Checkbox</type>
</CustomField>