force-app/main/default/objects/Vehicle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation</fullName>
                <default>true</default>
                <label>Evaluation</label>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>