force-app/main/default/objects/Vehicle__c/fields/Wheels__c.field-meta.xml
<CustomField>
    <fullName>Wheels__c</fullName>
    <label>Wheels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19&quot; Silver Wheels</fullName>
                <default>true</default>
                <label>19&quot; Silver Wheels</label>
            </value>
            <value>
                <fullName>19&quot; Sonic Carbon Wheels</fullName>
            </value>
            <value>
                <fullName>19&quot; Onyx Black Spinners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>