force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Owner__c</columns>
    <columns>Model__c</columns>
    <columns>Status__c</columns>
    <columns>Cancelled__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Vehicles</label>
</ListView>