force-app/main/default/objects/Vehicle__c/listViews/Manufactured_Vehicles.listView-meta.xml
<ListView>
    <fullName>Manufactured_Vehicles</fullName>
    <columns>NAME</columns>
    <columns>Owner__c</columns>
    <columns>Model__c</columns>
    <columns>Manufacturing_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Manufacturing</value>
    </filters>
    <label>Manufactured Vehicles</label>
</ListView>