force-app/main/default/objects/Vehicle__c/listViews/Purchased_Vehicles.listView-meta.xml
<ListView>
    <fullName>Purchased_Vehicles</fullName>
    <columns>NAME</columns>
    <columns>Owner__c</columns>
    <columns>Model__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Purchase</value>
    </filters>
    <filters>
        <field>Prediction_Sample__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Purchased Vehicles</label>
</ListView>